iniciando banner com grid

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./assets/style/flex.css" />
+    <link rel="stylesheet" href="./assets/style/grid.css" />
     <link rel="stylesheet" href="./assets/style/style.css" />
   </head>
 
